feat: 🎸 add blocklists api
also updates swagger docs
